hphp/hack/test/typecheck/conditional_function_decl.php.exp
File "conditional_function_decl.php", line 13, characters 3-23:
Encountered unexpected text `function f(): void {}`, was expecting a statement. (Parsing[1002])
File "conditional_function_decl.php", line 13, characters 31-31:
Inline function definitions are not supported in Hack (Parsing[1002])
